+ convert to the separated library